# faeb

./: .gitignore  DEPLOYMENT_GUIDE.md  GITHUB_REPOSITORIES_COMPLETE.md  LICENSE  PROGRESS.md  README.md  SETUP-GUIDE.md  WORKSPACE_TODO_LIST.md  build.sh  test.sh
aws/: deploy-website.sh  squarespace-domain-setup.md
core/: CMakeLists.txt
core/include/faeb/: runtime.h
core/src/: io.c  memory.c  process.c  scheduler.c  verification.c
docs/: principles.md
tests/: test_main.c
verify/formal/: verification.v
